--- a/README
+++ b/README
@@ -1,39 +1,1 @@
-# README #
-
-Gra Wyścigi Konne.
-
-## Parametry koniów ##
-
-### Szybkość wrodzona ###
-Wartość: 0 - 5.
-Im większa tym koń szybszy.
-
-### Wiek ###
-Wartość: 5 - 25.
-Przeciętna długość życia konia wynosi 25-30 lat. Koń jest w najlepszej formie w okolicach 12 roku życia. Wcześniej jego forma jest albo niedoszlifowana albo ma małe doświadczenie w bieganiu. Powyżej 18 roku życia koń jest coraz to wolniejszy.
-
-### Wytrzymałość ###
-Wartość: 2 - 10.
-Im koń ma większą wytrzymałość tym skuteczniej utrzymuje swoją szybkość przez cały wyścig. Jeżeli ma małą wytrzymałość, jego szybkość spadnie po dłuższym dystansie.
-
-### Szczęście ###
-Wartość: 0 - 10.
-Każdy koń ma odrębny współczynnik szczęścia. Jeżeli koń ma szczęście potrafi nagle przyśpieszyć i skutecznie wyprzedzić swoją konkurencję.
-Kiedy koń ma więcej pecha niż szczęścia, zdarza się że podczas wyścigu dozna kontuzji i jego szybkość mocno spadnie.
-
-PODZIAŁ DYSTANSU
-Dystans dzielimy na 4 części:
-* 0 - 0,25
-* 0,26 - 0,5
-* 0,51 - 0,75
-* 0,76 - 1
-
-Obliczany jest ze wzoru: PrzebytyDystans/CalkowityDystans.
-
-DYSTANS A WYTRZYMAŁOŚC KONIA (Mnożnik *1 i mniej...)
-Jeżeli wytrzymałośc konia 10 do 9 to koń utrzymuje szybkość przez cały wyścig.
-Jeżeli wytrzymałość konia 8 do 6 to koń ma mnożnik 0,7 w czwartej częśći wyścigu.
-Jeżeli wytrzymałość konia 5 do 4 to koń ma mnożnik 0,7 już w połowie wyścigu.
-Jezeli wytrzymałośc konia 3 do 0 to koń ma mnożnik 0,5 w połowie wyścigu.
-
-----------------------------------------------------------
+Horse Racing Game Readme file.
